# Django-REST-Framework-Docker

./: README.md  pyproject.toml
PlayersApi_project/: settings.py  urls.py
players/: views.py
